some ui alignment fixes for mobile and change resume download to pdf instead of doc

--- a/css/styles.css
+++ b/css/styles.css
@@ -219,7 +219,7 @@
     border: 1px solid black;
     border-radius: 2rem;
     text-align: center;
-    padding: 1rem;
+    padding: 0.5rem;
 
     
 }
@@ -475,7 +475,7 @@
 
 /* responsive */
 /* change to 1 column when mobile/screen small */
-@media only screen and (max-width: 1000px) {
+@media only screen and (max-width: 1380px) {
     .content,.content2 {
         grid-template-columns: 100%;
     }
@@ -515,6 +515,10 @@
 
     input,textarea,button,select,a,div{
         -webkit-tap-highlight-color: rgba(0,0,0,0);
+    }
+
+    .content2 .employment .employment-date,.education-date{
+    padding: .3rem;
     }
 
     @media only screen and (max-width: 400px) {
